Properties Editor Icon Colors are wrong for Text and Light Probes #64213

Closed
opened 2019-05-06 19:18:36 +02:00 by RedMser · 3 comments
Contributor

Blender Version
Broken: version: 2.80 (sub 60), branch: master, commit date: 2019-05-06 11:48, hash: 578ead77f9

Following the recent addition of colored icons in the Properties Editor navbar tabs, some colors are chosen wrongly:

  • For Text objects, the object data tab is not colored (should use the "Object Data" color) ptabs1.png
    • Similarly (but unrelated to this bug), Text objects show the curve icon in the outliner, instead of the text data's icon ptabs1b.png
  • For Light Probe objects (any kind), the object data tab uses the color "Object" (should be the "Object Data" color) ptabs2.png
**Blender Version** Broken: version: 2.80 (sub 60), branch: master, commit date: 2019-05-06 11:48, hash: `578ead77f9` Following the recent addition of colored icons in the Properties Editor navbar tabs, some colors are chosen wrongly: - For Text objects, the object data tab is not colored (should use the "Object Data" color) ![ptabs1.png](https://archive.blender.org/developer/F7010394/ptabs1.png) - Similarly (but unrelated to this bug), Text objects show the curve icon in the outliner, instead of the text data's icon ![ptabs1b.png](https://archive.blender.org/developer/F7010402/ptabs1b.png) - For Light Probe objects (any kind), the object data tab uses the color "Object" (should be the "Object Data" color) ![ptabs2.png](https://archive.blender.org/developer/F7010397/ptabs2.png)
Author
Contributor

Added subscriber: @RedMser

Added subscriber: @RedMser
William Reynish self-assigned this 2019-05-06 19:22:26 +02:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Fixed two issues.

The font one I can't change because in fact fonts are curves.

Fixed two issues. The font one I can't change because in fact fonts are curves.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64213
No description provided.