Fix: T64213 Properties Editor Icon Colors are wrong for Text and Light Probes