source/blender/makesrna/intern/rna_lightprobe.c
@@ -77,7 +77,7 @@ static void rna_def_lightprobe(BlenderRNA *brna)
   srna = RNA_def_struct(brna, "LightProbe", "ID");
   RNA_def_struct_ui_text(
       srna, "LightProbe", "Light Probe data-block for lighting capture objects");
-  RNA_def_struct_ui_icon(srna, ICON_OUTLINER_OB_LIGHTPROBE);
+  RNA_def_struct_ui_icon(srna, ICON_OUTLINER_DATA_LIGHTPROBE);
 
   prop = RNA_def_property(srna, "type", PROP_ENUM, PROP_NONE);
   RNA_def_property_enum_items(prop, lightprobe_type_items);
